==> ben-jacobson/Remora-STM32F4xx-PIO/Src/remora-hal/STM32F4_EthComms.cpp <==
#include "STM32F4_EthComms.h"
#include "../remora-core/drivers/W5500_Networking/W5500_Networking.h"
#include "remora-core/configuration.h"

void STM32F4_EthComms::init(void) {
    printf("EthComms Init\n");

    spiHandle.Instance = (SPI_TypeDef* )getSPIPeripheralName(mosiPinName, misoPinName, clkPinName); // get the SPI handle from the list of GPIO used for Mosi, Miso, SCK

    InitDMAIRQs(spiHandle.Instance);    // set up the IRQs for DMA triggering
    enableSPIClocks(spiHandle.Instance);

    printf("initialising SPI pins\n");
    csPin = new Pin(csPortAndPin, GPIO_MODE_OUTPUT_PP, GPIO_NOPULL, GPIO_SPEED_FREQ_VERY_HIGH, 0);  
    rstPin = new Pin(rstPortAndPin, GPIO_MODE_OUTPUT_PP, GPIO_NOPULL, GPIO_SPEED_FREQ_VERY_HIGH, 0);

    // Create alternate function SPI pins
    mosiPin = createPinFromPinMap(mosiPortAndPin, mosiPinName, PinMap_SPI_MOSI);
    misoPin = createPinFromPinMap(misoPortAndPin, misoPinName, PinMap_SPI_MISO);
    clkPin  = createPinFromPinMap(clkPortAndPin,  clkPinName,  PinMap_SPI_SCLK);

    printf("Setting up SPI and DMA\n");

    IRQn_Type irqSPI; 

    if (spiHandle.Instance == SPI1)
    {
        printf("Initialising SPI1 DMA\n");
        irqSPI = SPI1_IRQn;
        initSPIDMA(DMA2_Stream0, DMA2_Stream3, DMA_CHANNEL_3);       
        irqDMArx = DMA2_Stream0_IRQn;           
        irqDMAtx = DMA2_Stream3_IRQn; 
    }
    else if (spiHandle.Instance == SPI2)
    {
        printf("Initialising SPI2 DMA\n");
        irqSPI = SPI2_IRQn;
        initSPIDMA(DMA1_Stream3, DMA1_Stream4, DMA_CHANNEL_0);     
        irqDMArx = DMA1_Stream3_IRQn;           
        irqDMAtx = DMA1_Stream4_IRQn;         
    }
    else if (spiHandle.Instance == SPI3)
    {
        printf("Initialising SPI3 DMA\n");
        irqSPI = SPI3_IRQn;
        initSPIDMA(DMA1_Stream0, DMA1_Stream5, DMA_CHANNEL_0);                  
        irqDMArx = DMA1_Stream0_IRQn;           
        irqDMAtx = DMA1_Stream5_IRQn;           
    }
    else
    {
        printf("Invalid SPI bus selected, please check your SPI configuration in your PlatformIO SPI1-3\n");
        return;
    }    

    // Register our new SPI Interrupts so that we can handle the callback internally
    spiInterrupt = new ModuleInterrupt<STM32F4_EthComms>(
        irqSPI,
        this,
        &STM32F4_EthComms::handleSPIInterrupt
    );
    HAL_NVIC_SetPriority(irqSPI, 0, 0);
    HAL_NVIC_EnableIRQ(irqSPI); 

    // Register the DMA Rx interrupt so that we can handle the callback internally
    dmaRxInterrupt = new ModuleInterrupt<STM32F4_EthComms>(
        irqDMArx,
        this,
        &STM32F4_EthComms::handleRxInterrupt
    );
    HAL_NVIC_SetPriority(irqDMArx, Config::spiDmaRxIrqPriority, 0);
    HAL_NVIC_EnableIRQ(irqDMArx);

    // Register the DMA Rx interrupt so that we can handle the callback internally
    dmaTxInterrupt = new ModuleInterrupt<STM32F4_EthComms>(
        irqDMAtx,
        this,
        &STM32F4_EthComms::handleTxInterrupt
    );
    HAL_NVIC_SetPriority(irqDMAtx, Config::spiDmaTxIrqPriority, 0); // TX needs higher priority than RX
    HAL_NVIC_EnableIRQ(irqDMAtx);    

    // Note that spiHandle.instance is set up in the class constructor, we now need to init the rest of SPI handle
    spiHandle.Init.Mode           			= SPI_MODE_MASTER;
    spiHandle.Init.Direction      			= SPI_DIRECTION_2LINES;
    spiHandle.Init.DataSize       			= SPI_DATASIZE_8BIT;
    spiHandle.Init.CLKPolarity    			= SPI_POLARITY_LOW;
    spiHandle.Init.CLKPhase       			= SPI_PHASE_1EDGE;
    spiHandle.Init.NSS            			= SPI_NSS_SOFT; 
    spiHandle.Init.BaudRatePrescaler        = SPI_BAUDRATEPRESCALER_2; 
    spiHandle.Init.FirstBit       			= SPI_FIRSTBIT_MSB;
    spiHandle.Init.TIMode         			= SPI_TIMODE_DISABLE;
    spiHandle.Init.CRCCalculation 			= SPI_CRCCALCULATION_DISABLE;
    spiHandle.Init.CRCPolynomial  			= 10; 

    if (HAL_SPI_Init(&this->spiHandle) != HAL_OK)
    {
        printf("Error initialising SPI\n");
    }

    // printf("Initialising DMA for Memory to Memory transfer\n");

    // hdma_memtomem.Instance 					= DMA1_Stream2;       // F4 doesn't have a nice clean mem2mem so will manually use DMA1,2 which is available
    // hdma_memtomem.Init.Channel 				= DMA_CHANNEL_0;       // aparently not needed for mem2mem so using an unused channel
    // hdma_memtomem.Init.Direction 			= DMA_MEMORY_TO_MEMORY;
    // hdma_memtomem.Init.PeriphInc 			= DMA_PINC_ENABLE;
    // hdma_memtomem.Init.MemInc 				= DMA_MINC_ENABLE;
    // hdma_memtomem.Init.PeriphDataAlignment 	= DMA_PDATAALIGN_BYTE;
    // hdma_memtomem.Init.MemDataAlignment 	= DMA_MDATAALIGN_BYTE;
    // hdma_memtomem.Init.Mode 				= DMA_NORMAL;
    // hdma_memtomem.Init.Priority 			= DMA_PRIORITY_LOW;
    // hdma_memtomem.Init.FIFOMode 			= DMA_FIFOMODE_ENABLE;
    // hdma_memtomem.Init.FIFOThreshold 		= DMA_FIFO_THRESHOLD_FULL;
    // hdma_memtomem.Init.MemBurst 			= DMA_MBURST_SINGLE;
    // hdma_memtomem.Init.PeriphBurst 			= DMA_PBURST_SINGLE;

    // __HAL_RCC_DMA1_CLK_ENABLE();  
    // HAL_DMA_Init(&hdma_memtomem);
}

uint8_t STM32F4_EthComms::read_byte(void)
{
	spiHandle.Instance->DR = 0xFF; // Writing dummy data into Data register
    while(!__HAL_SPI_GET_FLAG(&spiHandle, SPI_FLAG_RXNE));
    return (uint8_t)spiHandle.Instance->DR;
    // uint8_t tx = 0xFF;
    // uint8_t rx = 0;

    // if (HAL_SPI_TransmitReceive(&spiHandle, &tx, &rx, 1, HAL_MAX_DELAY) != HAL_OK) {
    //     Error_Handler();
    // }

    // return rx;    
}

uint8_t STM32F4_EthComms::write_byte(uint8_t byte)
{
	spiHandle.Instance->DR = byte;
    while(!__HAL_SPI_GET_FLAG(&spiHandle, SPI_FLAG_TXE));
    while(!__HAL_SPI_GET_FLAG(&spiHandle, SPI_FLAG_RXNE));
    __HAL_SPI_CLEAR_OVRFLAG(&spiHandle);
    return (uint8_t)spiHandle.Instance->DR;

    // uint8_t rx = 0;

    // if (HAL_SPI_TransmitReceive(&spiHandle, &byte, &rx, 1, HAL_MAX_DELAY) != HAL_OK) {
    //     Error_Handler();
    // }

    // return rx;    
}

void STM32F4_EthComms::DMA_write(uint8_t *data, uint16_t len)
{
    if(HAL_SPI_Transmit_DMA(&spiHandle, data, len) == HAL_OK)
        while(spiHandle.State != HAL_SPI_STATE_READY);
}

void STM32F4_EthComms::DMA_read(uint8_t *data, uint16_t len)
{
    if (HAL_SPI_Receive_DMA(&spiHandle, data, len) == HAL_OK)
        while(spiHandle.State != HAL_SPI_STATE_READY);
}
